--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body { padding-top: 70px; }
 }
 
 .script-style {
-    font-family: 'Pacifico', cursive;
+    font-family: 'Satisfy', cursive;
 }
 
 .centered {
