--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,7 @@ body { padding-top: 70px; }
     overflow: auto;
     padding-top: 21px;
     padding-bottom: 21px;
-}
-
-.script-style {
-    font-family: 'Satisfy', cursive;
+    font-family: 'Raleway', Helvetica, sans-serif;
 }
 
 .centered {
