--- a/css/style.css
+++ b/css/style.css
@@ -45,4 +45,6 @@ body { padding-top: 70px; }
     text-transform: uppercase;
     color: #fff;
     text-align: center;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
