--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,8 @@ body { padding-top: 70px; }
 }
 
 .navbar-nav li a {
-    color: #fff;
+    color: #fff !important;
+    text-shadow: none !important;
 }
 
 .container-fluid{
