--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body { padding-top: 70px; }
 .announce-container{
     background:rgba(255,255,255,0.7);
     padding: 150px 200px;
+    border-radius: 0px !important;
 }
 
 .navbar-inverse .navbar-collapse, .navbar-fixed-top{
