--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body { padding-top: 80px; }
 .navbar-nav li a {
     color: #fff !important;
     text-shadow: none !important;
+    padding: 30px;
 }
 
 .navbar-nav li a:hover{
