--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ body { padding-top: 80px; }
     border-width: 0px;
 }
 
+.navbar-inverse .navbar-nav>.active>a{
+    background: none !important;
+}
+
 .navbar-nav {
     font-weight: bold;
     letter-spacing: 1px;
