--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,11 @@ body { padding-top: 80px; }
     width: 100%;
 }
 
-.announce-container{
+.announce-container, .panel {
     background:rgba(255,255,255,0.7);
     padding: 100px 180px;
     border-radius: 0px !important;
+    border-width: 0px;
 }
 
 .navbar-inverse .navbar-collapse, .navbar-fixed-top{
