--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body { padding-top: 80px; }
     color: #fff !important;
     text-shadow: none !important;
     padding: 30px;
+    font-size: 16px;
 }
 
 .navbar-nav li a:hover{
