--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,15 @@ body { padding-top: 80px; }
     width: 100%;
 }
 
-.announce-container, .panel {
+.announce-container {
     background:rgba(255,255,255,0.7);
+    padding: 100px 180px;
+    border-radius: 0px !important;
+    border-width: 0px;
+}
+
+.panel {
+    background-color:rgba(255,255,255,0.7);
     padding: 100px 180px;
     border-radius: 0px !important;
     border-width: 0px;
