--- a/css/style.css
+++ b/css/style.css
@@ -29,14 +29,14 @@ body { padding-top: 80px; }
 }
 
 .announce-container {
-    background:rgba(255,255,255,0.7);
+    background:rgba(255,255,255,0.8);
     padding: 100px 180px;
     border-radius: 0px !important;
     border-width: 0px;
 }
 
 .panel {
-    background-color:rgba(255,255,255,0.7);
+    background-color:rgba(255,255,255,0.8);
     padding: 100px 180px;
     border-radius: 0px !important;
     border-width: 0px;
@@ -55,6 +55,7 @@ body { padding-top: 80px; }
 
 .navbar-inverse .navbar-nav>.active>a{
     background: none !important;
+    box-shadow: none !important;
 }
 
 .navbar-nav {
