--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body { padding-top: 80px; }
 
 .announce-container {
     background:rgba(255,255,255,0.8);
-    padding: 100px 180px;
+    padding: 100px 18%;
     border-radius: 0px !important;
     border-width: 0px;
 }
